# SafeDayCounter

./: .clang-format  .cproject  .gitignore  CMakeLists.txt  CMakePresets.json  STM32G071R8TX_FLASH.ld  Software.ioc
App/: safe_days.cpp  safe_days.h
App/Calendar/: calendar.cpp  calendar.h  calendar_stm32.cpp  calendar_stm32.h
App/Calendar/test/: CMakeLists.txt  test_calendar.cpp
App/Config/: config_manager.cpp  config_manager.h
App/Display/: display.cpp  display.h
App/Display/driver/: TLC591x.cpp  TLC591x.h
App/Logger/: elog_cfg.h  elog_port.c  elog_port.h
App/Utility/: bcd.cpp  bcd.h  conv.cpp  conv.h
App/Utility/test/: CMakeLists.txt  conv_test.cpp
Core/Inc/: FreeRTOSConfig.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
Core/Src/: main.cpp  stm32g0xx_hal_msp.c  stm32g0xx_it.c
Debug/: Software.elf  Software.list  Software.map  makefile  objects.list  sources.mk
Debug/Core/Src/: app_freertos.d  main.cyclo  main.d  main.su  stm32g0xx_hal_msp.cyclo  stm32g0xx_hal_msp.d  stm32g0xx_hal_msp.su  stm32g0xx_hal_timebase_tim.d  stm32g0xx_it.cyclo  stm32g0xx_it.d  stm32g0xx_it.su  subdir.mk  system_stm32g0xx.d
Debug/Core/Startup/: subdir.mk
Debug/Drivers/STM32G0xx_HAL_Driver/Src/: stm32g0xx_hal.d  stm32g0xx_hal_cortex.d  stm32g0xx_hal_dma.d  stm32g0xx_hal_dma_ex.d  stm32g0xx_hal_exti.d  stm32g0xx_hal_flash.d  stm32g0xx_hal_flash_ex.d  stm32g0xx_hal_gpio.d  stm32g0xx_hal_irda.cyclo  stm32g0xx_hal_irda.d  stm32g0xx_hal_irda.su  stm32g0xx_hal_pwr.d  stm32g0xx_hal_pwr_ex.d  stm32g0xx_hal_rcc.d  stm32g0xx_hal_rcc_ex.d  stm32g0xx_hal_rtc.d  stm32g0xx_hal_rtc_ex.d  stm32g0xx_hal_spi.d  stm32g0xx_hal_spi_ex.d  stm32g0xx_hal_tim.d  stm32g0xx_hal_tim_ex.d  stm32g0xx_hal_uart.d  stm32g0xx_hal_uart_ex.d  subdir.mk
Drivers/STM32G0xx_HAL_Driver/Inc/: stm32g0xx_hal_rtc.h
cmake/: gcc-arm-none-eabi.cmake  logger.cmake  st-project.cmake
setup/: DockerFile  DockerFileQemu  docker-compose.yaml  setup_env
